--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -121,13 +121,12 @@
             >
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="千山"
                 android:paddingStart="10dp"
                 android:layout_marginStart="@dimen/margin_left_10"
                 android:layout_marginEnd="@dimen/margin_right_10"
-                android:background="@null"
                 />
             <ImageView
                 android:layout_width="wrap_content"
