--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -172,6 +172,21 @@
                 />
         </RelativeLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margin_top_30"
+        >
+        <Button
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:background="@drawable/tb_btn_login_orange_normal"
+            android:text="退出登录"
+            android:textColor="@color/white"
+            android:onClick="onQuit"
+            />
+    </LinearLayout>
 
 
 </LinearLayout>
