--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="margin_left_10">10dp</dimen>
     <dimen name="margin_right_10">10dp</dimen>
     <dimen name="margin_top_10">10dp</dimen>
+    <dimen name="margin_top_20">20dp</dimen>
+    <dimen name="margin_top_30">30dp</dimen>
 </resources>
